# dian-cli

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  hello_test.cc  readme.md  vcpkg.json
cmake/: deps.cmake
include/: foo.hpp  wintools.hpp
res/: config_ime.json
src/: CMakeLists.txt  dianrm.cpp  dianswitch.c  foo.cpp  imemain.cpp  main.cpp  test.cpp  winAtStart.cpp  winmain.cpp  winmaind.cpp  wintools.cpp  zenhan.cpp
src/ime-dian-d/: CMakeLists.txt
src/win-dian-d/: CMakeLists.txt
src/zenhan/: CMakeLists.txt
test/: ftx_test.cc  hello_test.cc  json_test.cc  simple_test.cc
